[gd_scene load_steps=5 format=3 uid="uid://dynkjvsk5o81l"]

[ext_resource type="Script" path="res://Scripts/party_member_panel.gd" id="1_gtjpt"]
[ext_resource type="Theme" uid="uid://t5q7l0mnqh4c" path="res://Resources/foxtheme.tres" id="1_vsx7s"]
[ext_resource type="Texture2D" uid="uid://ch5vt2ibuhik2" path="res://Assets/MichaelFace.png" id="2_ebbqf"]
[ext_resource type="PackedScene" uid="uid://q1b454wf423a" path="res://Scenes/UI/action_button.tscn" id="3_bvjph"]

[node name="PartyMemberPanel" type="PanelContainer"]
custom_minimum_size = Vector2(200, 0)
offset_right = 182.0
offset_bottom = 124.0
theme = ExtResource("1_vsx7s")
script = ExtResource("1_gtjpt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "Name of party member"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MemberIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_ebbqf")
expand_mode = 3

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_bvjph")]
layout_mode = 2

[node name="ActionButton2" parent="VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_bvjph")]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
value = 50.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/ActionButton" to="." method="_on_action_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/ActionButton2" to="." method="_on_action_2_pressed"]
